Header z-index fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,7 @@ h1 {
 
 .menu {
     position: fixed;
+    z-index:10;
     top: 0;
     left: 0;
     right: 0;
